force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <description>A Proposal object in Salesforce is created to manage and track formal offers or business quotes shared with clients, detailing products, pricing, and terms.</description>
    <label>Proposal</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>