force-app/main/default/objects/Proposal__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>To store the date of proposal Initiated</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>