force-app/main/default/objects/Proposal__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>To select the timeline for proposal</description>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-9 Months</fullName>
            </value>
            <value>
                <fullName>9-12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>